# PHPForge

./: .gitignore  CMakeLists.txt  main.cpp
include/: lexer.h  token.h  tokenType.h
src/: lexer.cpp
src/ast/: ASTNode.h  expression.cpp  expression.h  functionDecl.cpp  functionDecl.h  program.cpp  program.h  statement.cpp  statement.h
src/codegen/: codegen.cpp  codegen.h
src/interpreter/: environment.cpp  environment.h  interpreter.cpp  interpreter.h  value.cpp  value.h
src/lexer/: lexer.h  token.h  tokenType.h
src/parser/: parser.cpp  parser.h
src/semantic/: scope.h  semanticAnalyzer.cpp  semanticAnalyzer.h  symbol.cpp  symbol.h
test/: add.php  error_undefined_function.php  error_undefined_var.php  synchronize_test.php
